# TransferNet

./: README.md  pyproject.toml  requirements.txt
market_analysis/: 2009.json  2010.json  2011.json  2012.json  2013.json  2014.json  2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json
notebooks/: EDA.ipynb  edge_pred.ipynb  graph_modeling.ipynb  temporalAnalysis.ipynb
src/: dashboard.py  dashboardold.py  data_processing.py  edge_pred.py  temporalAnalysis.py  visualization.py
