[project]
name = "transfernet"
version = "0.1.0"
description = ""
authors = [
    {name = "transfernet",email = "transfernet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.1,<7.0.0)"
]

[tool.poetry.dependencies]
gensim = "4.3.2"

[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


